<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Simple Todo App</string>
    <string name="action_settings">Settings</string>
    <string name="button_add_label">Add</string>
    <string name="label_enter_new_item">Enter new item</string>
    <string name="title_activity_edit_item">Edit Item</string>
    <string name="label_edit_item_below">Edit Item:</string>
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>
    <string name="label_due_date">Due Date:</string>
    <string name="toggle_capital_no">NO</string>
    <string name="toggle_capital_yes">YES</string>
    <string name="label_today">Today</string>

</resources>
