<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.flukiness.simpletodoapp.EditItemActivity" >

    <TextView
        android:id="@+id/tvEditItemLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/label_edit_item_below"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/etEditItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvEditItemLabel"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tvEditItemLabel"
        android:layout_marginTop="15dp"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etEditItem"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" >

        <TextView
            android:id="@+id/tvDueDateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/label_due_date"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <ToggleButton
            android:id="@+id/tbtnDueDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/tvDueDateLabel"
            android:onClick="updateDueDateVisibility"
            android:textOff="@string/toggle_capital_no"
            android:textOn="@string/toggle_capital_yes" />

    </RelativeLayout>

    <DatePicker
        android:id="@+id/dpDueDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:calendarViewShown="false" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dpDueDate"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:onClick="finishEditing"
        android:text="@string/button_save" />

</RelativeLayout>